--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "name": "ui5-bump-version",
-  "version": "1.0.1",
-  "description": "Bump version for ui5 qpplication",
+  "version": "0.1.0",
+  "description": "Bump version for ui5 application",
   "scripts": {
     "test": "mocha"
   },
-  "author": "jberthe",
-  "license": "ISC",
+  "author": "Joseph BERTHE",
+  "license": "Apache-2.0",
   "devDependencies": {
     "jsonfile": "^5.0.0",
     "mocha": "^6.2.2"
@@ -17,5 +17,9 @@
   "preferGlobal": true,
   "bin": {
     "ui5-bump": "ui5-bump-version.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/jberthe/ui5-bump-version.git"
   }
 }
