--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -4,7 +4,7 @@ version: 2.1
 jobs:
   test:
     docker:
-      - image: circleci/node:current
+      - image: docker/node:current
         auth:
           username: jberthe
           password: $DOCKERHUB_PASSWORD
