--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,6 +6,8 @@ orbs:
 # Define the jobs we want to run for this project
 jobs:
   test:
+    docker:
+      - image: cimg/node:14.19.2
     steps:
       - checkout
       - node/install-packages:
@@ -14,6 +16,8 @@ jobs:
           name: "Run mocha tests"
           command: npm run test
   deploy:
+    docker:
+      - image: cimg/node:14.19.2
     steps:
       - run:
           name: Authenticate with registry
