--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -36,7 +36,7 @@ workflows:
     jobs:
       - test
       - deploy:
-          contect:
+          context:
             - NPM
           requires: 
             - test
