--- a/package.json
+++ b/package.json
@@ -3,13 +3,17 @@
   "version": "1.1.0",
   "description": "Bump version for ui5 application",
   "scripts": {
-    "test": "mocha"
+    "test": "nyc mocha",
+    "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Joseph BERTHE",
   "license": "Apache-2.0",
   "devDependencies": {
+    "coveralls": "3.1.1",
     "jsonfile": "^5.0.0",
-    "mocha": "^9.1.1"
+    "mocha": "^9.1.1",
+    "mocha-lcov-reporter": "1.3.0",
+    "nyc": "15.1.0"
   },
   "dependencies": {
     "path": "^0.12.7",
