ci: change coverage script

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -18,7 +18,7 @@ jobs:
           command: |
             COVERALLS_REPO_TOKEN=${REPO_TOKEN_BUMPVERSION}
             echo $COVERALLS_REPO_TOKEN
-            npm install && make test-coverage
+            npm install && npm run coverage
       - coveralls/upload
   deploy:
     docker:
