--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,10 +15,7 @@ jobs:
           pkg-manager: npm
       - run:
           name: "Run mocha tests"
-          command: |
-            COVERALLS_REPO_TOKEN=${REPO_TOKEN_BUMPVERSION}
-            echo $COVERALLS_REPO_TOKEN
-            npm install && npm run coverage
+          command: npm install && npm run coverage
       - coveralls/upload
   deploy:
     docker:
