--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -14,6 +14,22 @@ jobs:
           pkg-manager: npm
       - run:
           name: "Run mocha tests"
+          command: npm run test
+      - store_artifacts:
+          path: test-results
+          prefix: tests
+      - store_test_results: # for display in Test Summary: https://circleci.com/docs/2.0/collect-test-data/
+          path: test-results
+
+  coverage:
+    docker:
+      - image: cimg/node:14.19.2
+    steps:
+      - checkout
+      - node/install-packages:
+          pkg-manager: npm
+      - run:
+          name: "Run mocha tests"
           command: npm install && npm run coverage
   deploy:
     docker:
@@ -33,6 +49,7 @@ workflows:
   test_and_deploy:
     jobs:
       - test
+      - coverage
       - deploy:
           context:
             - NPM
