--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "Bump version for ui5 application",
   "scripts": {
-    "test": "nyc mocha",
+    "test": "mocha --reporter=xunit --reporter-option output=./test-results/mocha/results.xml",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Joseph BERTHE",
