--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "Bump version for ui5 application",
   "scripts": {
-    "test": "mocha --reporter=xunit --reporter-option output=./test-results/mocha/results.xml",
+    "test": "mocha --reporter mocha-junit-reporter",
     "coverage": "nyc npm test && nyc report --reporter=text-lcov | coveralls"
   },
   "author": "Joseph BERTHE",
@@ -12,6 +12,7 @@
     "coveralls": "3.1.1",
     "jsonfile": "^5.0.0",
     "mocha": "^9.1.1",
+    "mocha-junit-reporter": "2.0.2",
     "mocha-lcov-reporter": "1.3.0",
     "nyc": "15.1.0"
   },
